# simple-rss

./: .gitignore  CLAUDE.md  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
celery_tasks/: celery.py  tasks.py
config/: asgi.py  jinja2.py  urls.py  wsgi.py
config/settings/: base.py  development.py
core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/management/commands/: fetch_feed.py
core/migrations/: 0001_initial.py  0002_feed_last_auto_fetch_at.py
core/services/: fetcher.py  parser.py  translator.py
core/tests/: test_models.py  test_views.py
core/utils/: __init__.py  article_utils.py
docs/: troubleshooting.md
reader/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
reader/migrations/: 0001_initial.py
reader/tests/: test_models.py  test_views.py
scripts/: init_db.py  migrate_data.py  test_feed_creation.py  test_redis_config.py  test_rss_url.py
static/css/: style.css
static/js/: main.js
templates/base/: base.html  nav.html
templates/core/: article_detail.html  article_list.html  feed_detail.html  feed_form.html  feed_list.html  index.html
templates/reader/: favorites.html  read_later.html
utils/: cloudflare_proxy.py  feed_parser.py  translation_client.py
